--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,30 @@
   }
   
   table,th,td {
-    border: solid rgb(173, 40, 151) 1px;
+    background-color: rgb(204, 175, 131);
+    border: solid rgb(148, 69, 32) 1px;
     border-collapse: collapse;
   }
+#fish{
+  background-color: rgb(204, 175, 131);
+}
+body{
+  background-color: rgb(238, 228, 214);
+}
+a{
+    display: inline-block;
+    padding: 25px;
+    color: rgb(170, 67, 36);
+   text-decoration: none;
+}
+h1{
+ float: right;
+ margin-right: 300px;
+ position: relative;
+ top: 120px;
+  color: rgb(160, 126, 75);
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+image{
+  float: left;
+}
