--- a/css/style2.css
+++ b/css/style2.css
@@ -17,7 +17,7 @@ header{
   #im1{
      margin-left: 350px;
      position: relative;
-     top:-150px;
+     top:-120px;
   }
   nav{
     /* display: inline-block; */
@@ -32,6 +32,8 @@ nav ul{
 
 }
 nav ul li a{
+  text-decoration: none;
+
     /* margin-bottom: 50px; */
     display: inline-block;
     /* position: relative; */
