--- a/css/style2.css
+++ b/css/style2.css
@@ -1,43 +1,186 @@
 *{
     box-sizing: border-box;
-    font-family: 'Kiwi Maru', serif;
+    /* font-family: 'Kiwi Maru', serif; */
+}
+h1{
+  font-family: 'Dancing Script', cursive;
+  font-style: italic;
+color: #4b626e;  
 }
 body{
-    background-color: rgb(247, 239, 229);
+    background-color: #f0ece3;
 }
 header{
     padding: 25px;
-    background-color: rgb(250, 230, 206);
-    height: 280px;
+    background-color:#dfd3c3;
+    height: 200px;
   }
   /* h1{
     position: relative;
     top: -380px;
   } */
-  #im1{
-     margin-left: 350px;
-     position: relative;
-     top:-120px;
+
+
+     .im111 {
+      animation: im111 ease-in-out 1s infinite alternate;
+      transform-origin: center -20px;
+      float:left;
+      box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+    }
+  
+     /* .im11{
+      border: 5px solid #f8f8f8;
+      display: block;
+  } */
+  .im111:after{
+      content: '';
+      position: absolute;  
+      width: 20px; height: 20px;  
+      border: 1px solid #999;
+      top: -10px; left: 50%;
+      z-index: 0;
+      border-bottom: none;
+      border-right: none;
+      transform: rotate(45deg);
   }
+  /* nail */
+  .im111:before{
+      content: '';
+      position: absolute;
+      width: 5px; height: 5px;
+      toground: #000;
+  }
+   
+  @keyframes im111 {
+      0% { transform: rotate(3deg); }
+      100% { transform: rotate(-3deg); }
+                  }
+     p:-14px;lef: 54%;
+      z-index: 5;
+      border-radius: 50% 50%;
+      back
+      }
   nav{
-    /* display: inline-block; */
-    margin-bottom: 30px;
+   text-decoration: none;
+    display: inline;
+    /* margin-bottom: 30px; */
 }
 nav ul{
+  text-decoration: none;
     /* margin-right: 500px; */
     float: right;
   position: relative;
-  top: -200px;
+
+  top: -50px;
 /* margin-bottom: 50px; */
 
 }
 nav ul li a{
   text-decoration: none;
-
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
     /* margin-bottom: 50px; */
     display: inline-block;
     /* position: relative; */
     padding: 25px;
-    color: rgb(170, 67, 36);
+    color: #596e79;
 
+}
+/* #left{
+  display: inline;
+  position: relative;
+  left: 1100px;
+ 
+  top: -200px;
+  overflow: visible;
+} */
+#pra1{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #596e79;
+  font-size: initial;
+  position: relative;
+  left:330px
+ 
+
+}
+.slider2{
+  width: 700px;
+  height: 500px;
+  display: flex;
+  overflow-x: auto;
+  position: relative;
+  left:330px
+}
+.slide {
+  width: 300px;
+  flex-shrink: 0;
+  height: 100%;
+}
+
+#pra{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #596e79;
+  font-size: initial;
+  position: relative;
+  left:330px
+}
+.slider {
+  width: 700px;
+  height: 500px;
+  display: flex;
+  overflow-x: auto;
+  position: relative;
+  left:330px
+}
+.slide {
+  width: 300px;
+  flex-shrink: 0;
+  height: 100%;
+}
+#left{
+  display: inline;
+ margin-left: 1320px;
+ width: 500px;
+ height: 400px;
+}
+
+
+footer{
+ height: 100%;
+ width: 100%;
+  display: inline;
+  background-color: #596e79;
+
+}
+
+#fo{
+  color: #596e79;
+  display: inline;
+  position: relative;
+  left: 870px;
+  top: 100px;
+}
+#foo{
+  color: #596e79;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+#name1{
+  color: #596e79;
+  background-color: #dfd3c3;
+}
+#num{
+  color:  #dfd3c3;
+  background-color: #596e79;
+}
+#em{
+  color: #596e79;
+  background-color: #dfd3c3;
+
+}
+#add{
+  color:  #dfd3c3;
+  background-color: #596e79;
+}
+footer label{
+color: #596e79;
 }
